data/derived/fa15/progs/unify/prog4040.ml.out
Characters 32-34:
  let rec exprToString e = [Sine (pi * e)];;
                                  ^^
Error: This expression has type float but an expression was expected of type
         int
